@@ -1,34 +1,111 @@
 package com.Fisport.service.impl;
 
-import com.Fisport.dto.request.ServiceItemsRequest;
-import com.Fisport.dto.response.FieldResponse;
+import com.Fisport.dto.request.ServiceItemRequest;
 import com.Fisport.dto.response.ServiceItemResponse;
-import com.Fisport.model.Field;
+import com.Fisport.exception.InvalidDataException;
+import com.Fisport.exception.ResourceNotFoundException;
+import com.Fisport.model.Service;
 import com.Fisport.model.ServiceItem;
 import com.Fisport.repository.ServiceItemRepository;
+import com.Fisport.repository.ServiceRepository;
 import com.Fisport.service.ServiceItemService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Service
+@org.springframework.stereotype.Service
 @RequiredArgsConstructor
 public class ServiceItemServiceImpl implements ServiceItemService {
 
-    @Autowired
-    private ServiceItemRepository serviceItemRepository;
+    private final ServiceItemRepository serviceItemRepository;
+    private final ServiceRepository serviceRepository;
 
     @Override
+    @Transactional(readOnly = true)
     public List<ServiceItemResponse> findAll() {
         List<ServiceItem> serviceItems = serviceItemRepository.findAll();
-        return serviceItems.stream().map(this::toDto).toList();
+        return serviceItems.stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public void save(ServiceItemsRequest serviceItemsRequest) {
+    @Transactional(readOnly = true)
+    public List<ServiceItemResponse> findAllByServiceId(Long serviceId) {
+        // Kiểm tra service có tồn tại không
+        if (!serviceRepository.existsById(serviceId)) {
+            throw new ResourceNotFoundException("Không tìm thấy Service với ID: " + serviceId);
+        }
+        
+        List<ServiceItem> serviceItems = serviceItemRepository.findByServiceId(serviceId);
+        return serviceItems.stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
+    }
 
+    @Override
+    @Transactional(readOnly = true)
+    public ServiceItemResponse findById(Long id) {
+        ServiceItem serviceItem = serviceItemRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy ServiceItem với ID: " + id));
+        return toDto(serviceItem);
+    }
+
+    @Override
+    @Transactional
+    public ServiceItemResponse createServiceItem(ServiceItemRequest request) {
+        // Kiểm tra Service có tồn tại không
+        Service service = serviceRepository.findById(request.getServiceId())
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy Service với ID: " + request.getServiceId()));
+        
+        // Kiểm tra tên sản phẩm đã tồn tại trong service này chưa
+        serviceItemRepository.findByNameAndServiceId(request.getName(), request.getServiceId())
+                .ifPresent(si -> {
+                    throw new InvalidDataException("Sản phẩm '" + request.getName() + "' đã tồn tại trong loại dịch vụ này");
+                });
+
+        ServiceItem serviceItem = ServiceItem.builder()
+                .name(request.getName())
+                .service(service)
+                .build();
+
+        ServiceItem savedServiceItem = serviceItemRepository.save(serviceItem);
+        return toDto(savedServiceItem);
+    }
+
+    @Override
+    @Transactional
+    public ServiceItemResponse updateServiceItem(Long id, ServiceItemRequest request) {
+        ServiceItem serviceItem = serviceItemRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy ServiceItem với ID: " + id));
+
+        // Kiểm tra Service có tồn tại không
+        Service service = serviceRepository.findById(request.getServiceId())
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy Service với ID: " + request.getServiceId()));
+
+        // Kiểm tra tên mới có trùng với sản phẩm khác trong cùng service không
+        serviceItemRepository.findByNameAndServiceId(request.getName(), request.getServiceId())
+                .ifPresent(si -> {
+                    if (!si.getId().equals(id)) {
+                        throw new InvalidDataException("Sản phẩm '" + request.getName() + "' đã tồn tại trong loại dịch vụ này");
+                    }
+                });
+
+        serviceItem.setName(request.getName());
+        serviceItem.setService(service);
+        
+        ServiceItem updatedServiceItem = serviceItemRepository.save(serviceItem);
+        return toDto(updatedServiceItem);
+    }
+
+    @Override
+    @Transactional
+    public void deleteServiceItem(Long id) {
+        ServiceItem serviceItem = serviceItemRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy ServiceItem với ID: " + id));
+        serviceItemRepository.delete(serviceItem);
     }
 
     private ServiceItemResponse toDto(ServiceItem si) {
@@ -36,6 +113,7 @@ public class ServiceItemServiceImpl implements ServiceItemService {
                 .id(si.getId())
                 .name(si.getName())
                 .service_id(si.getService().getId())
+                .serviceName(si.getService().getName())
                 .build();
     }
 }
